--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -136,18 +136,22 @@ h6 {
     font-size: 18px;
     line-height: 20px;
 }
-.select2-container--default .select2-selection--single,
-.select2-container--default,
-.select2-selection--single,
-.select2-container,
-.select2-selection {
-    font-size: 16px;
+.navbar .select2-container--default .select2-selection--single,
+.navbar .select2-container--default,
+.navbar .select2-selection--single,
+.navbar .select2-container,
+.navbar .select2-selection {
+    font-size: 18px;
 }
 .language {
     font-size: 0.8em;
 }
 .lm-nav {
     font-size: 24px;
+}
+
+.lm-nav.lm-regions {
+    font-size: 40px;
 }
 
 .lm-footer {
@@ -580,11 +584,53 @@ p a {
     padding: 5px !important;
 }
 
+.select2-container--default .select2-selection--single .select2-selection__placeholder {
+    color: #4e4e4e !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border-top-color: #4e4e4e !important;
+}
+.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
+    border-bottom-color: #4e4e4e !important;  
+}
+
+.select2-container {
+    vertical-align: top !important;
+    margin-top: 3px !important;
+}
+
+.select2-search {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    position: relative;
+}
+.select2-search::before {
+    content: "\e003";
+    top: 16px;
+    right: 12px;
+    position: absolute;
+}
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+    background: #44c42d !important;
+    color: #fff !important;
+}
+.select2-container--open .select2-selection--single .select2-selection__placeholder {
+    color: #44c42d !important;
+}
+
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
     background: #fcfcfc;
     opacity: 1;
-    color: #b9d635;
+    color: #44c42d;
     z-index: 99;
 }
 
@@ -598,8 +644,13 @@ p a {
 }
 
 .lm-nav {
-    top: 10px;
     padding-right: 10px;
+    display: inline-block;
+}
+
+.lm-nav.lm-regions,
+.lm-nav.lm-flag {
+    margin-top: 5px;
 }
 
 .container .lm {
