installed threaded_comments and enabled them in deal detail view
Former-commit-id: f4d86d0ac8d5a765523071d083c29c5a6341c94d

--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -2,6 +2,8 @@
 {% load i18n custom_tags static %}
 {% load humanize %}
 
+{% load threadedcomments_tags %}
+
 {% block head %}
 
     {# bootstrap #}
@@ -105,6 +107,11 @@
                 </div>
             {% endif %}
         </div>
+
+<h2>Comments:</h2>
+
+{% render_comment_list for deal.activity %}
+{% render_comment_form for deal.activity %}
 
         <script type="text/javascript">
             $(document).ready(function () {
