URL pattern fixes - probably obsolete after the pull
Former-commit-id: fbf6f49019f022e8034bcfe11b2384a274789d53

--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -6,7 +6,7 @@
 
 {% block breadcrumb_inner %}
 <li><a href="/global/">Global</a></li>
-<li><a href="/global/">Charts</a></li>
+<li><a href="/global/chart">Charts</a></li>
 {% endblock %}
 
 {% block subnav_inner %}
