--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -25,7 +25,7 @@
 {% block title %}Deal #{{ deal.activity_identifier }}{% endblock %}
 
 {% block breadcrumb_inner %}
-    <li><a href="/global/">Global</a> <span class="divider"></span></li>
+    <li><a href="/global/">Global</a></li>
     <li>{% trans "Deal" %} #{{ deal.activity_identifier }}</li>
 {% endblock %}
 
