Added crispy forms

--- a/grid/templates/includes/dealpanels.html
+++ b/grid/templates/includes/dealpanels.html
@@ -1,7 +1,8 @@
+{% load crispy_forms_tags %}
 {% if forms %}
 
     {% for form in forms %}
-
+        {% crispy form %}
         <div class="panel panel-default">
 
 
