--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -10,6 +10,7 @@
     {# map #}
     <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
     <link rel="stylesheet" href="{% static "css/map.css" %}"/>
+    <link rel="stylesheet" href="{% static "vendor/select2/dist/css/select2.min.css" %}"/>
 
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
@@ -17,12 +18,6 @@
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
     <script>unlockMaps()</script>
 
-    {# include django_select2 CSS; must be done in form loop because it's a property of form.media #}
-    {% if forms %}
-        {% for form in forms %}
-            {{ form.media.css }}
-        {%  endfor %}
-    {%  endif %}
 
 {% endblock %}
 
@@ -31,8 +26,8 @@
 
 {% block breadcrumb %}
     <ul class="breadcrumb">
-        <li><a href="/editor">Editor</a> <span class="divider"></span></li>
-        <li><a href="/en/global/add/">Add a deal</a> <span class="divider"></span></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/deal/add/">Add a deal</a></li>
     </ul>
 {% endblock %}
 
