Link to chart fixed
Former-commit-id: 9588565c4d08946a025cd57ceffa23b0780e32d0

--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,7 @@
                         <li><a href="/global/charts/transnational-deals">Global Web of transn. deals</a></li>
                         <li><a href="/global/map">Global map of investments</a></li>
                         <li><a href="/global/map">Interactive Map</a></li>
-                        <li><a href="/country/grid">Grid of deals by country</a></li>
+                        <li><a href="/global/data/by-target_country/">Grid of deals by country</a></li>
                         <li><a href="/download">Download Data</a></li>
                     </ul>
                 </div>
