--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -26,13 +26,13 @@
 
 {% endblock %}
 
-{% block page_title %}Add a deal{% endblock %}
-{% block title %}Add a deal{% endblock %}
+{% block page_title %}{% trans "Add a deal" %}{% endblock %}
+{% block title %}{% trans "Add a deal" %}{% endblock %}
 
 {% block breadcrumb %}
     <ul class="breadcrumb">
-        <li><a href="/editor">Editor</a> <span class="divider"></span></li>
-        <li><a href="/en/global/add/">Add a deal</a> <span class="divider"></span></li>
+        <li><a href="/editor">{% trans "Editor" %}</a> <span class="divider"></span></li>
+        <li><a href="/en/global/add/">{% trans "Add a deal" %}</a> <span class="divider"></span></li>
     </ul>
 {% endblock %}
 
