--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -35,8 +35,46 @@
 
     {% if deal %}
         <div class="panel-group" id="accordion">
+            {% if forms %}
+                {% for form in forms %}
+                    <div class="panel panel-default">
 
-            {% include "includes/dealpanels.html" %}
+                        <div class="panel-heading">
+                            <a data-toggle="collapse" data-parent="#accordion"
+                               href="#collapse_{{ forloop.counter }}">
+                                <h5 class="panel-title">
+                                    {{ form.form_title }}
+                                    <span id="collapsebtn_{{ forloop.counter }}"
+                                          class="lm-chevron-circle-down pull-right mgrey1"></span>
+                                </h5>
+                            </a>
+                        </div>
+
+                        <div id="collapse_{{ forloop.counter }}"
+                             class="panel-collapse collapse{% if forloop.first %} in {% endif %}">
+                            <div class="panel-body">
+                                {% for field in form %}
+                                    {% if field.value %}
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                {{ field.label }}
+                                            </div>
+                                            <div class="col-md-10">
+                                                {% if field.display_value %}
+                                                    {{ field.display_value }}
+                                                {% else %}
+                                                    {{ field.value }}
+                                                {% endif %}
+                                            </div>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% endif %}
+
 
             {% if history|length > 1 %}
                 <div class="panel panel-default">
