--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -10,10 +10,10 @@
 {% endblock %}
 
 {% block subnav_inner %}
-    <li role="presentation"><a href="../map/">
+    <li role="presentation"><a href="/global/map/">
         <i class="lm lm-map-marker"></i>{% trans "Map" %}
     </a></li>
-    <li role="presentation"><a href="../data/">
+    <li role="presentation"><a href="/global/data/">
         <i class="lm lm-table"></i>{% trans "Data" %}
     </a></li>
     <li role="presentation" class="active"><span>
