--- a/templates/filters.html
+++ b/templates/filters.html
@@ -80,7 +80,7 @@
                             <option>Starts with</option>
                             <option>Ends with</option>
                         </select>
-                        <input class="field" type="text" value="Foobar" class="inline">
+                        <input class="field" type="text" value="" class="inline">
                     </div>
                     <div class="input-group">
                         <button class="btn btn-default"><i class="lm lm-plus"></i> Add condition</button>
