Added country and region list
Former-commit-id: 8934dad761618ae2e4cdf8705c46536c14b04400

--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -591,8 +591,14 @@ p a {
     font-weight: 400;
 }
 
-.navbar-main .form-group {
+.navbar-main li > span {
+    padding: 18px 15px 55px 15px;
     height: 47px;
+    display: inline-block;
+}
+
+.navbar-main .select2 {
+    width: auto !important;
 }
 
 .navbar-main .select2 .select2-dropdown {
